--- a/client/src/app/login/login.component.html
+++ b/client/src/app/login/login.component.html
@@ -1,1 +1,15 @@
-<p>login works!</p>
+<div class="container">
+  <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
+    <div class="form-group">
+      <label for="loginId">Login:</label>
+      <input class="form-control" type="text" name="loginId" id="loginId" placeholder="Login">
+    </div>
+    <div class="form-group">
+      <label for="password">Password:</label>
+      <input class="form-control" type="text" name="password" id="password" placeholder="Password">
+    </div>
+    <div class="text-center">
+      <button type="submit" class="btn btn-lg">Sign In</button>
+    </div>
+  </form>
+</div>
