--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,2 +1,7 @@
-
+<div style="text-align:center"class="container">
+  <h1>
+    Welcome {{title}}!
+  </h1>
+  
+</div>
 <router-outlet></router-outlet>
