--- a/client/src/app/login/login.component.html
+++ b/client/src/app/login/login.component.html
@@ -1,6 +1,8 @@
 <div class="container">
-  <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
+  <form [formGroup]="credentials" (ngSubmit)="login()">
     <div class="form-group">
+        <div class="alert alert-warning" *ngIf='invalidLogin'>{{errorMessage}}</div>
+        <div class="alert alert-success" *ngIf='loginSuccess'>{{successMessage}}</div>
       <label for="loginId">Login:</label>
       <input class="form-control" type="text" name="loginId" id="loginId" placeholder="Login">
     </div>
