--- a/client/src/app/form/form.component.html
+++ b/client/src/app/form/form.component.html
@@ -9,11 +9,46 @@
       <input class="form-control" type="text" name="lastNameId" id="lastNameId" placeholder="Last Name">
     </div>
     <div class="form-group">
-      <label for="courseStudied">Course studied:</label>
-      <input class="form-control" type="text" name="courseStudied" id="courseStudied" placeholder="Name of course">
+      <label for="courseStudiedId">Course studied:</label>
+      <input class="form-control" type="text" name="courseStudiedId" id="courseStudiedId" placeholder="Course studied">
     </div>
+  <!-- TODO: insert date picker for batch/year-->
+    <div class="form-group">
+      <label for="coopHostId">Coop Host Company Name:</label>
+      <input class="form-control" type="text" name="coopHostId" id="coopHostId" placeholder="Name">
+    </div>
+    <div class="form-group">
+      <label for="coopAddressId">Coop Address:</label>
+      <input class="form-control" type="text" name="coopAddressId" id="coopAddressId" placeholder="Address">
+    </div>
+    <div class="form-group">
+      <label for="contactPersonId">Contact Person:</label>
+      <input class="form-control" type="text" name="contactPersonId" id="contactPersonId" placeholder="Contact person">
+    </div>
+<!--     TODO: insert date picker for coop start date-->
+<!--     TODO: insert date picker for coop end date-->
+<!--     TODO: insert date picker for actual end date-->
+<!--     TODO: insert date picker for evaluation 1 due date-->
+<!--     TODO: insert date picker for evaluation 1 submission date-->
+<!--     TODO: insert date picker for evaluation 2 due date-->
+<!--     TODO: insert date picker for evaluation 2 submission date-->
+<!--     TODO: insert date picker for time sheet due date-->
+<!--     TODO: insert date picker for time sheet submission date-->
+    <div class="form-check">
+      <input class="form-check-input" type="checkbox" id="WSIBCheckbox">
+      <label class="form-check-label" for="WSIBCheckbox">
+        WSIB on file
+      </label>
+    </div>
+    <div class="form-check">
+      <input class="form-check-input" type="checkbox" id="InsuranceCheckbox">
+      <label class="form-check-label" for="InsuranceCheckbox">
+        Insurance on file
+      </label>
+    </div>
+    <!--     TODO: insert date picker for contract signed on -->
     <div class="text-center">
-      <button type="submit" class="btn btn-lg">Submit</button>
+      <button type="submit" class="btn btn-lg">Save</button>
     </div>
   </form>
 </div>
