Add title to form

--- a/client/src/app/form/form.component.html
+++ b/client/src/app/form/form.component.html
@@ -1,3 +1,4 @@
+<h1 class="title">Willis College Coop Placement</h1>
 <div class="container">
   <form [formGroup]="mainForm" (ngSubmit)="onSubmit()">
     <div class="form-group">
